RESOLVED FIXED46641
[chromium] fix a warning when compiling DRT on 32-bit linux
https://bugs.webkit.org/show_bug.cgi?id=46641
Summary [chromium] fix a warning when compiling DRT on 32-bit linux
Tony Chang
Reported 2010-09-27 11:54:49 PDT
[chromium] fix a warning when compiling DRT on 32-bit linux
Attachments
Patch (1.56 KB, patch)
2010-09-27 11:55 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2010-09-27 11:55:12 PDT
Tony Chang
Comment 2 2010-09-27 11:56:15 PDT
Chromium has a macro for this in base/format_macros.h (PRIuS), but we can't use that here. Seems safe to just cast in this case.
David Levin
Comment 3 2010-09-27 16:18:55 PDT
Comment on attachment 68940 [details] Patch Programming Is Hard, Let's Go Shopping!
WebKit Commit Bot
Comment 4 2010-09-27 18:40:42 PDT
Comment on attachment 68940 [details] Patch Clearing flags on attachment: 68940 Committed r68466: <http://trac.webkit.org/changeset/68466>
WebKit Commit Bot
Comment 5 2010-09-27 18:40:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.