2010-09-27  Tony Chang  <tony@chromium.org>

Reviewed by David Levin.

        [chromium] fix a warning when compiling DRT on 32-bit linux
        https://bugs.webkit.org/show_bug.cgi?id=46641

        * DumpRenderTree/chromium/TestEventPrinter.cpp:
        (DRTPrinter::handleImage):

Canonical link: https://commits.webkit.org/59154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68466 268f45cc-cd09-0410-ab3c-d52691b4dbfc